--- a/Dealwheel/Base.lproj/Main.storyboard
+++ b/Dealwheel/Base.lproj/Main.storyboard
@@ -390,10 +390,14 @@
                                     <action selector="continueButtonTapped:" destination="UbD-iJ-3AO" eventType="touchUpInside" id="oaY-Qy-fj5"/>
                                 </connections>
                             </button>
-                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="email address" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="xtr-Go-etJ">
-                                <rect key="frame" x="39" y="400" width="243" height="30"/>
+                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="email address" textAlignment="center" minimumFontSize="15" translatesAutoresizingMaskIntoConstraints="NO" id="xtr-Go-etJ">
+                                <rect key="frame" x="45" y="399" width="230" height="36"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="36" id="G8N-nO-byv"/>
+                                </constraints>
                                 <nil key="textColor"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="16"/>
                                 <textInputTraits key="textInputTraits" keyboardType="emailAddress"/>
                             </textField>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Please Enter Email to Receive Your Giftcard" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="7EH-C6-7QY">
@@ -408,21 +412,21 @@
                             <constraint firstItem="sbT-P3-pee" firstAttribute="top" secondItem="oRT-3S-5Rg" secondAttribute="bottom" constant="44" id="2e7-qG-9CL"/>
                             <constraint firstAttribute="trailingMargin" secondItem="sbT-P3-pee" secondAttribute="trailing" constant="45" id="86E-kD-iDa"/>
                             <constraint firstItem="sbT-P3-pee" firstAttribute="leading" secondItem="X63-Yd-6uV" secondAttribute="leadingMargin" constant="45" id="BFC-dV-HwP"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="xtr-Go-etJ" secondAttribute="trailing" constant="29" id="BjN-vi-eIJ"/>
                             <constraint firstItem="7EH-C6-7QY" firstAttribute="top" secondItem="PPU-V0-F3D" secondAttribute="bottom" constant="29.5" id="NKF-9U-qOX"/>
                             <constraint firstAttribute="trailing" secondItem="PPU-V0-F3D" secondAttribute="trailing" constant="28" id="O6P-nW-ysZ"/>
                             <constraint firstAttribute="trailingMargin" secondItem="7EH-C6-7QY" secondAttribute="trailing" constant="21" id="P8n-kh-ScM"/>
-                            <constraint firstItem="xtr-Go-etJ" firstAttribute="leading" secondItem="X63-Yd-6uV" secondAttribute="leadingMargin" constant="23" id="Qvl-01-JzV"/>
                             <constraint firstItem="PPU-V0-F3D" firstAttribute="leading" secondItem="X63-Yd-6uV" secondAttribute="leading" constant="28" id="Srm-na-619"/>
                             <constraint firstItem="7EH-C6-7QY" firstAttribute="leading" secondItem="X63-Yd-6uV" secondAttribute="leadingMargin" constant="23" id="Ucd-ez-8KT"/>
                             <constraint firstItem="dqM-Jc-AvT" firstAttribute="top" secondItem="EEc-cs-I14" secondAttribute="bottom" constant="66" id="Wyj-Pw-ZCh"/>
                             <constraint firstAttribute="trailingMargin" secondItem="YwO-H1-VLQ" secondAttribute="trailing" constant="94" id="XIf-Ff-bbQ"/>
-                            <constraint firstItem="xtr-Go-etJ" firstAttribute="top" secondItem="7EH-C6-7QY" secondAttribute="bottom" constant="23" id="gaD-fE-ezx"/>
+                            <constraint firstItem="xtr-Go-etJ" firstAttribute="top" secondItem="7EH-C6-7QY" secondAttribute="bottom" constant="22" id="bvd-LX-pMt"/>
                             <constraint firstItem="YwO-H1-VLQ" firstAttribute="top" secondItem="sbT-P3-pee" secondAttribute="bottom" constant="18" id="gy2-AB-QwH"/>
                             <constraint firstItem="YwO-H1-VLQ" firstAttribute="leading" secondItem="X63-Yd-6uV" secondAttribute="leadingMargin" constant="94" id="hfe-p8-tON"/>
                             <constraint firstItem="EEc-cs-I14" firstAttribute="leading" secondItem="X63-Yd-6uV" secondAttribute="leadingMargin" constant="85" id="iV6-Fh-NU0"/>
                             <constraint firstAttribute="trailingMargin" secondItem="EEc-cs-I14" secondAttribute="trailing" constant="86" id="ktd-QN-mjT"/>
                             <constraint firstItem="PPU-V0-F3D" firstAttribute="top" secondItem="YwO-H1-VLQ" secondAttribute="bottom" constant="29" id="pGV-L3-vw1"/>
-                            <constraint firstAttribute="trailingMargin" secondItem="xtr-Go-etJ" secondAttribute="trailing" constant="22" id="y0i-S6-atw"/>
+                            <constraint firstItem="xtr-Go-etJ" firstAttribute="leading" secondItem="X63-Yd-6uV" secondAttribute="leadingMargin" constant="29" id="ua4-KI-qlS"/>
                         </constraints>
                     </view>
                     <connections>
