--- a/Dealwheel/Base.lproj/Main.storyboard
+++ b/Dealwheel/Base.lproj/Main.storyboard
@@ -51,7 +51,7 @@
                                     <constraint firstAttribute="width" secondItem="7zh-e3-NF7" secondAttribute="height" multiplier="30:17" id="wLc-e3-xWg"/>
                                 </constraints>
                             </imageView>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="This is an awesome deal I just won on this app" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontForContentSizeCategory="YES" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="7Hu-tG-gii">
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="This is an awesome deal I just won on this app" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="7Hu-tG-gii">
                                 <rect key="frame" x="40" y="385" width="240" height="39.5"/>
                                 <fontDescription key="fontDescription" name="BudmoJiggler-Regular" family="Budmo" pointSize="18"/>
                                 <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
@@ -92,6 +92,7 @@
                             <constraint firstItem="7zh-e3-NF7" firstAttribute="leading" secondItem="zPe-tn-85L" secondAttribute="leadingMargin" constant="24" id="Rpl-gd-ABy"/>
                             <constraint firstAttribute="trailingMargin" secondItem="TWo-Px-V66" secondAttribute="trailing" constant="94" id="daI-kj-zzt"/>
                             <constraint firstItem="TWo-Px-V66" firstAttribute="leading" secondItem="zPe-tn-85L" secondAttribute="leadingMargin" constant="94" id="e1k-Ar-2aT"/>
+                            <constraint firstItem="YB4-0H-6h2" firstAttribute="top" secondItem="7Hu-tG-gii" secondAttribute="bottom" constant="21.5" id="jc5-T4-nJZ"/>
                             <constraint firstItem="om5-9y-xU4" firstAttribute="top" secondItem="kFk-pD-KEL" secondAttribute="bottom" constant="50" id="jch-sY-gsI"/>
                             <constraint firstAttribute="trailingMargin" secondItem="7zh-e3-NF7" secondAttribute="trailing" constant="24" id="jl6-r8-HZV"/>
                             <constraint firstItem="7Hu-tG-gii" firstAttribute="top" secondItem="7zh-e3-NF7" secondAttribute="bottom" constant="10" id="p8j-UQ-iRT"/>
@@ -554,7 +555,7 @@
         <image name="wedge.png" width="150" height="150"/>
     </resources>
     <inferredMetricsTieBreakers>
-        <segue reference="hEa-qF-j0m"/>
+        <segue reference="f8r-GJ-4JX"/>
         <segue reference="SH1-ps-cV5"/>
     </inferredMetricsTieBreakers>
 </document>
